--- a/Proje/Views/Movies/Details.cshtml
+++ b/Proje/Views/Movies/Details.cshtml
@@ -46,6 +46,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.movieRunningTime)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.movieCategories)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.movieCategories)
+        </dd>
     </dl>
 </div>
 <div>
