--- a/Proje/Views/Animes/Details.cshtml
+++ b/Proje/Views/Animes/Details.cshtml
@@ -52,6 +52,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.animeStory)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.animeCategories)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.animeCategories)
+        </dd>
     </dl>
 </div>
 <div>
