--- a/Proje/Views/Animes/Edit.cshtml
+++ b/Proje/Views/Animes/Edit.cshtml
@@ -49,6 +49,11 @@
                 <span asp-validation-for="animeStory" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="animeCategories" class="control-label"></label>
+                <input asp-for="animeCategories" class="form-control" />
+                <span asp-validation-for="animeCategories" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
