--- a/Proje/Views/Animes/Index.cshtml
+++ b/Proje/Views/Animes/Index.cshtml
@@ -33,6 +33,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.animeStory)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.animeCategories)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -59,6 +62,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.animeStory)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.animeCategories)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.animeId">Edit</a> |
