--- a/Proje/Views/Movies/Create.cshtml
+++ b/Proje/Views/Movies/Create.cshtml
@@ -43,6 +43,12 @@
                 <span asp-validation-for="movieRunningTime" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="movieCategories" class="control-label"></label>
+                @Html.ListBoxFor(x => x.movieCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new {id= "multiSelectDropdown",multiple="multiple"})
+                <span asp-validation-for="movieCategories" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -54,5 +60,15 @@
 </div>
 
 @section Scripts {
+    <script>
+
+        $(function () {
+            $("#multiSelectDropdown").chosen({
+                width: "100%",
+                disable_search_thresholder: 5
+            });
+
+        });
+    </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
