--- a/Proje/Views/Movies/Edit.cshtml
+++ b/Proje/Views/Movies/Edit.cshtml
@@ -44,6 +44,11 @@
                 <span asp-validation-for="movieRunningTime" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="movieCategories" class="control-label"></label>
+                <input asp-for="movieCategories" class="form-control" />
+                <span asp-validation-for="movieCategories" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
