--- a/Proje/Views/Movies/Index.cshtml
+++ b/Proje/Views/Movies/Index.cshtml
@@ -30,6 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.movieRunningTime)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.movieCategories)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -53,6 +56,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.movieRunningTime)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.movieCategories)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.movieId">Edit</a> |
