--- a/Proje/Views/TvShows/Delete.cshtml
+++ b/Proje/Views/TvShows/Delete.cshtml
@@ -53,6 +53,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.showStory)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.showCategories)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.showCategories)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
