--- a/Proje/Views/TvShows/Index.cshtml
+++ b/Proje/Views/TvShows/Index.cshtml
@@ -33,6 +33,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.showStory)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.showCategories)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -59,6 +62,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.showStory)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.showCategories)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.showId">Edit</a> |
