--- a/Proje/Views/Movies/Edit.cshtml
+++ b/Proje/Views/Movies/Edit.cshtml
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="movieCategories" class="control-label"></label>
-                <input asp-for="movieCategories" class="form-control" />
+                @Html.ListBoxFor(x => x.movieCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new {id= "multiSelectDropdown",multiple="multiple"})
                 <span asp-validation-for="movieCategories" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -60,5 +60,17 @@
 </div>
 
 @section Scripts {
+
+    <script>
+
+        $(function () {
+            $("#multiSelectDropdown").chosen({
+                width: "100%",
+                disable_search_thresholder: 5
+            });
+
+        });
+    </script>
+
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
