--- a/Proje/Views/Animes/Index.cshtml
+++ b/Proje/Views/Animes/Index.cshtml
@@ -3,16 +3,49 @@
 @{
     ViewData["Title"] = "Index";
 }
+<style>
+    .search {
+        float: right;
+    }
+</style>
 
-<h1>Index</h1>
+<h1>Animes</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+    <form method="get" asp-action="Index" id="Form" class="form-inline">
+        <div class="row">
+            <div class="col input-group">
+            <label class="col-sm-2 col-form-label">Sort By:  </label>
+            <div class="input-group-append">
+                <select id="sortBy" name="sortBy" class="form-select">
+                    <option selected value="">Please select an option</option>
+                    <option value="title">Title</option>
+                    <option value="year">Most recent</option>
+                    <option value="rating">Rating</option>
+                    <option value="episodes">Number of episodes</option>
+                </select>
+            </div>
+            
+            
+            </div>
+        <div class="col"></div>
+        <div class="col input-group ">
+            <input type="text" class="form-control" name="search" autocomplete="off">
+            <div class="input-group-append">
+                <button class="btn btn-info" type="submit" value="Search">Search</button>
+            </div>
+            
+        </div>
+    </form>
+
+
 <table class="table">
     <thead>
         <tr>
             <th>
+                
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.animeTitle)
@@ -35,8 +68,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.animeRating)
-            </td>
-            <td>
+            </td>   
             <td>
                 <a asp-action="Edit" asp-route-id="@item.animeId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.animeId">Details</a> |
@@ -46,3 +78,12 @@
 }
     </tbody>
 </table>
+
+@section Scripts {
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
+        $("#sortBy").on('change', function () {
+            document.forms["Form"].submit();
+        });
+    </script>
+    }
