--- a/Proje/Views/TvShows/Index.cshtml
+++ b/Proje/Views/TvShows/Index.cshtml
@@ -75,7 +75,7 @@
                         <option value="title">Title</option>
                         <option value="year">Most recent</option>
                         <option value="rating">Rating</option>
-                        <option value="episodes">Episdoes</option>
+                        <option value="episodes">Number of Episdoes</option>
                     </select>
                 </div>
 
