--- a/Proje/Views/Animes/Create.cshtml
+++ b/Proje/Views/Animes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Proje.Models.Anime
 
 @{
-    ViewData["Title"] = "Create";
+	ViewData["Title"] = "Create";
 }
 
 <h1>Create</h1>
@@ -9,71 +9,70 @@
 <h4>Anime</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="animeTitle" class="control-label"></label>
-                <input asp-for="animeTitle" class="form-control" />
-                <span asp-validation-for="animeTitle" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="animePoster" class="control-label"></label>
-                <input asp-for="animePoster" class="form-control" />
-                <span asp-validation-for="animePoster" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="animeRating" class="control-label"></label>
-                <input asp-for="animeRating" class="form-control" />
-                <span asp-validation-for="animeRating" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="animeEpisodes" class="control-label"></label>
-                <input asp-for="animeEpisodes" class="form-control" />
-                <span asp-validation-for="animeEpisodes" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="animeStartYear" class="control-label"></label>
-                <input asp-for="animeStartYear" class="form-control" />
-                <span asp-validation-for="animeStartYear" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="animeEndYear" class="control-label"></label>
-                <input asp-for="animeEndYear" class="form-control" />
-                <span asp-validation-for="animeEndYear" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="animeStory" class="control-label"></label>
-                <input asp-for="animeStory" class="form-control" />
-                <span asp-validation-for="animeStory" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                    <label asp-for="animeCategories" class="control-label"> </label>
-                    @Html.ListBoxFor(x => x.animeCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new {id= "multiSelectDropdown",multiple="multiple"})
-                    <span asp-validation-for="animeCategoryArray" class="text-danger"> </span>
-                    
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+	<div class="col-md-4">
+		<form asp-action="Create" id="submitForm">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="animeTitle" class="control-label"></label>
+				<input asp-for="animeTitle" class="form-control" />
+				<span asp-validation-for="animeTitle" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="animePoster" class="control-label"></label>
+				<input asp-for="animePoster" class="form-control" />
+				<span asp-validation-for="animePoster" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="animeRating" class="control-label"></label>
+				<input asp-for="animeRating" class="form-control" />
+				<span asp-validation-for="animeRating" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="animeEpisodes" class="control-label"></label>
+				<input asp-for="animeEpisodes" class="form-control" />
+				<span asp-validation-for="animeEpisodes" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="animeStartYear" class="control-label"></label>
+				<input asp-for="animeStartYear" class="form-control" />
+				<span asp-validation-for="animeStartYear" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="animeEndYear" class="control-label"></label>
+				<input asp-for="animeEndYear" class="form-control" />
+				<span asp-validation-for="animeEndYear" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="animeStory" class="control-label"></label>
+				<input asp-for="animeStory" class="form-control" />
+				<span asp-validation-for="animeStory" class="text-danger"></span>
+			</div>
+			<div class="form-group mb-2">
+				<label asp-for="animeCategories" class="control-label"> </label>
+				@Html.ListBoxFor(x => x.animeCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new {id= "multiSelectDropdown",multiple="multiple",required="required"})
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Create" class="btn btn-primary" />
+			</div>
+		</form>
+	</div
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+	<a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
-    <script>
+	<script>
 
-        $(function () {
-            $("#multiSelectDropdown").chosen({
-                width: "100%",
-                disable_search_thresholder: 5
-            });
-
-        });
-        </script>
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+		$(function () {
+			$("#multiSelectDropdown").chosen({
+				width: "100%",
+				disable_search_thresholder: 5
+			});
+		});
+	</script>
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
+	}
