--- a/Proje/Views/TvShows/Index.cshtml
+++ b/Proje/Views/TvShows/Index.cshtml
@@ -1,140 +1,141 @@
 ﻿@model IEnumerable<Proje.Models.TvShow>
 
 @{
-    ViewData["Title"] = "Index";
+	ViewData["Title"] = "Index";
 }
 
 <style>
-    .Form1 {
-        background-color: #222831;
-        border-radius: 5px;
-        padding: 7px 7px;
-        padding-inline: 3% 3%;
-        color: #EEEEEE;
-    }
+	.Form1 {
+		background-color: #222831;
+		border-radius: 5px;
+		padding: 7px 7px;
+		padding-inline: 3% 3%;
+		color: #EEEEEE;
+	}
 
-    .btn-info {
-        background-color: #00ADB5;
-        border-block-color: #00ADB5;
-    }
+	.btn-info {
+		background-color: #00ADB5;
+		border-block-color: #00ADB5;
+	}
 
-    .list-box {
-        -webkit-box-shadow: 0 0 35px 0 rgba(130, 130, 130, 0.2);
-        box-shadow: 0 0 35px 0 rgba(130, 130, 130, 0.2);
-        border-radius: 10px;
-        padding: 20px 35px;
-    }
+	.list-box {
+		-webkit-box-shadow: 0 0 35px 0 rgba(130, 130, 130, 0.2);
+		box-shadow: 0 0 35px 0 rgba(130, 130, 130, 0.2);
+		border-radius: 10px;
+		padding: 20px 35px;
+	}
 
-    table {
-        border-collapse: separate;
-        border-spacing: 0 15px;
-        vertical-align: middle;
-        padding-inline: 5% 5%;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        font-weight: bold;
-        font-size: 24px;
-    }
+	table {
+		border-collapse: separate;
+		border-spacing: 0 15px;
+		vertical-align: middle;
+		padding-inline: 5% 5%;
+		font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+		font-weight: bold;
+		font-size: 24px;
+	}
 
-    .pl {
-        text-align: left;
-        padding-inline-start: 20%;
-    }
+	.pl {
+		text-align: left;
+		padding-inline-start: 20%;
+	}
 
-    table td {
-        vertical-align: middle;
-    }
+	table td {
+		vertical-align: middle;
+	}
 
-    .img-card {
-        background: #ffffff;
-        box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.1);
-        width: 100%;
-        max-width: 150px;
-        margin: 2em;
-        border-radius: 10px;
-        display: inline-block;
-    }
+	.img-card {
+		background: #ffffff;
+		box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.1);
+		width: 100%;
+		max-width: 150px;
+		margin: 2em;
+		border-radius: 10px;
+		display: inline-block;
+	}
 
-        .img-card:hover {
-            -webkit-transform: scale(1.03);
-            transform: scale(1.03);
-            box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.08);
-        }
+		.img-card:hover {
+			-webkit-transform: scale(1.03);
+			transform: scale(1.03);
+			box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.08);
+		}
 
-    .fa-star {
-        color: #D5AB55;
-    }
+	.fa-star {
+		color: #D5AB55;
+	}
 </style>
 <div>
-    <form method="get" asp-action="Index" id="Form" class="form-inline Form1">
-        <div class="row">
-            <div class="col input-group">
-                <label class="col-sm-2 col-form-label">Sort By:  </label>
-                <div class="input-group-append">
-                    <select id="sortBy" name="sortBy" class="form-select">
-                        <option selected value="">Please select an option</option>
-                        <option value="title">Title</option>
-                        <option value="year">Most recent</option>
-                        <option value="rating">Rating</option>
-                        <option value="episodes">Number of Episdoes</option>
-                    </select>
-                </div>
+	<form method="get" asp-action="Index" id="Form" class="form-inline Form1">
+		<div class="row">
+			<div class="col input-group">
+				<label class="col-sm-2 col-form-label">Sort By:  </label>
+				<div class="input-group-append">
+					<select id="sortBy" name="sortBy" class="form-select">
+						<option selected value="">Please select an option</option>
+						<option value="title">Title</option>
+						<option value="year">Most recent</option>
+						<option value="rating">Rating</option>
+						<option value="episodes">Number of Episdoes</option>
+					</select>
+				</div>
+				@if (User.Identity.IsAuthenticated)
+				{
+					if (User.IsInRole("admin"))
+					{
+						<a asp-controller="TvShows" asp-action="Create" class="btn btn-primary ms-1">New Show</a>
+					}
+				}
+			</div>
+			<div class="col"></div>
+			<div class="col input-group ">
+				<input type="text" class="form-control" name="search" autocomplete="off">
+				<div class="input-group-append">
+					<button class="btn btn-info" type="submit" value="Search">Search</button>
+				</div>
 
-
-            </div>
-            <div class="col"></div>
-            <div class="col input-group ">
-                <input type="text" class="form-control" name="search" autocomplete="off">
-                <div class="input-group-append">
-                    <button class="btn btn-info" type="submit" value="Search">Search</button>
-                </div>
-
-            </div>
-    </form>
+			</div>
+	</form>
 </div>
 
 <table class="table">
-    @*<thead>
-        <tr>
-            <th>
-                
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.showTitle)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.showRating)
-            </th>
-            <th></th>
-        </tr>
-    </thead>*@
-    <tbody>
-@foreach (var item in Model) {
-        <tr class="list-box">
-            <td width="30%">
-                    <img src="@item.showPoster" class="img-card" asp-append-version="true">
-            </td>
-                <td class="pl">
-                @Html.DisplayFor(modelItem => item.showTitle)
-            </td>
-            <td class="text-left">
-                    <i class="fa-solid fa-star"></i>
-                @Html.DisplayFor(modelItem => item.showRating)
-            </td>
-           @* <td>
-                <a asp-action="Edit" asp-route-id="@item.showId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.showId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.showId">Delete</a>
-            </td>*@
-        </tr>
-}
-    </tbody>
+	<tbody>
+		@foreach (var item in Model)
+		{
+			<tr class="list-box">
+				<td width="30%">
+					<img src="@item.showPoster" class="img-card" asp-append-version="true">
+				</td>
+				<td class="pl">
+					@Html.DisplayFor(modelItem => item.showTitle)
+				</td>
+				<td class="text-left">
+					<i class="fa-solid fa-star"></i>
+					@Html.DisplayFor(modelItem => item.showRating)
+				</td>
+				<td>
+					@if (User.Identity.IsAuthenticated)
+					{
+						if (User.IsInRole("admin"))
+						{
+							<a asp-action="Edit" asp-route-id="@item.showId">Edit</a>
+							<a asp-action="Details" asp-route-id="@item.showId">Details</a>
+							<a asp-action="Delete" asp-route-id="@item.showId">Delete</a>
+						}
+					}
+				</td>
+				<td>
+					<a class="btn btn-primary">Add to List</a>
+				</td>
+			</tr>
+		}
+	</tbody>
 </table>
 
 @section Scripts {
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script>
-        $("#sortBy").on('change', function () {
-            document.forms["Form"].submit();
-        });
-    </script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script>
+		$("#sortBy").on('change', function () {
+			document.forms["Form"].submit();
+		});
+	</script>
     }
