aligning the Creat operation ...

--- a/Proje/Views/Animes/Index.cshtml
+++ b/Proje/Views/Animes/Index.cshtml
@@ -70,9 +70,9 @@
 	<form method="get" asp-action="Index" id="Form" class="form-inline Form1">
 		<div class="row">
 			<div class="col input-group">
-				<label class="col-sm-2 col-form-label">Sort By:  </label>
+				<label class="col-sm-2 col-form-label me-2">Sort By:  </label>
 				<div class="input-group-append">
-					<select id="sortBy" name="sortBy" class="form-select">
+					<select id="sortBy" name="sortBy" class="form-select" width=100%>
 						<option selected value="">Please select an option</option>
 						<option value="title">Title</option>
 						<option value="year">Most recent</option>
@@ -81,6 +81,11 @@
 					</select>
 				</div>
 
+
+			</div>
+			
+			
+			<div class="col text-center" >
 				@if (User.Identity.IsAuthenticated)
 				{
 					if (User.IsInRole("admin"))
@@ -88,11 +93,7 @@
 						<a asp-controller="Animes" asp-action="Create" class="btn btn-primary ms-1">New Anime</a>
 					}
 				}
-
-			</div>
-			
-			
-			<div class="col"></div>
+				</div>
 			<div class="col input-group ">
 				<input type="text" class="form-control" name="search" autocomplete="off">
 				<div class="input-group-append">
