--- a/Proje/Views/Movies/Delete.cshtml
+++ b/Proje/Views/Movies/Delete.cshtml
@@ -10,7 +10,7 @@
 <div>
     <h4>Movie</h4>
     <hr />
-    <dl class="row">
+    <dl class="row mb-2">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.movieTitle)
         </dt>
