--- a/Proje/Views/Account/Register.cshtml
+++ b/Proje/Views/Account/Register.cshtml
@@ -5,51 +5,63 @@
     ViewData["Title"] = "Sign up for a new account";
 }
 
-<div class="container">
-    <div class="col-md-6 offset-3">
-        <p>
-            <h4>Sign up a new account</h4>
-        </p>
+<style>
+    .box {
+        
+        background-color: #f2f3f4;
+        position: absolute;
+        left: 38%;
+        top: 17%;
+        -webkit-box-shadow: 0 0 40px 0 rgba(20, 20, 20, 0.4);
+        box-shadow: 0 0 40px 0 rgba(20, 20, 20, 0.4);
+        border-radius: 10px;
+        padding: 20px 35px;
+    }
+
+    input {
+        -webkit-box-shadow: 0 0 40px 0 rgba(255, 255,255,1);
+        box-shadow: 0 0 40px 0 rgba(255, 255, 255,1);
+        border-radius: 10px;
+    }
+</style>
+
+<div class="container ">
+    <div class="col-md-3 col-md-offset-3 box">
+        <div class="text-center mb-5"><h2>Sign Up</h2></div>
 
         @if (TempData["Error"] != null)
         {
-            <div class="col-md-12 alert alert-danger">
+            <div class="col-md-12 alert alert-danger text-center">
                 <span><b>Sorry!</b> - @TempData["Error"] </span>
             </div>
         }
-
-        <div class="container">
-            <div class="col-md-8 offset-2">
-                <form asp-action="Register">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="mb-4">
-                        <label asp-for="Name" class="control-label"></label>
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
-                    </div>
-
-                    <div class="mb-4">
-                        <label asp-for="Email" class="control-label"></label>
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                    <div class="mb-4">
-                        <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                    <div class="mb-4">
-                        <label asp-for="confirmPassword" class="control-label"></label>
-                        <input asp-for="confirmPassword" class="form-control" />
-                        <span asp-validation-for="confirmPassword" class="text-danger"></span>
-                    </div>
-
-                    <div class="mb-4">
-                        <input class="btn btn-outline-success float-lg-end" type="submit" value="Sign up" />
-                        <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Cancel</a>
-                    </div>
-                </form>
+        <form asp-action="Register">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="mb-4">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-        </div>
+
+            <div class="mb-4">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="mb-4">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="mb-4">
+                <label asp-for="confirmPassword" class="control-label"></label>
+                <input asp-for="confirmPassword" class="form-control" />
+                <span asp-validation-for="confirmPassword" class="text-danger"></span>
+            </div>
+
+            <div class="mb-4">
+                <input class="btn btn-success float-lg-end" type="submit" value="Sign up" />
+            </div>
+        </form>
     </div>
 </div>
