--- a/Proje/Views/Animes/Create.cshtml
+++ b/Proje/Views/Animes/Create.cshtml
@@ -3,10 +3,16 @@
 @{
 	ViewData["Title"] = "Create";
 }
+<style>
 
-<h1>Create</h1>
+	label{
+		font-weight:500;
+	}
+</style>
 
-<h4>Anime</h4>
+<h1>Create an Anime</h1>
+
+
 <hr />
 <div class="row">
 	<div class="col-md-4">
@@ -49,7 +55,7 @@
 			</div>
 			<div class="form-group mb-2">
 				<label asp-for="animeCategories" class="control-label"> </label>
-				@Html.ListBoxFor(x => x.animeCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new {id= "multiSelectDropdown",multiple="multiple"})
+				@Html.ListBoxFor(x => x.animeCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new { id= "multiSelectDropdown",multiple="multiple"})
 			</div>
 			<div class="form-group">
 				<input type="submit" value="Create" class="btn btn-primary" />
