--- a/Proje/Views/Animes/Edit.cshtml
+++ b/Proje/Views/Animes/Edit.cshtml
@@ -48,7 +48,7 @@
                 <input asp-for="animeStory" class="form-control" />
                 <span asp-validation-for="animeStory" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <label asp-for="animeCategories" class="control-label"></label>
                 @Html.ListBoxFor(x => x.animeCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new {id= "multiSelectDropdown",multiple="multiple"})
                 <span asp-validation-for="animeCategories" class="text-danger"></span>
