--- a/Proje/Views/Home/Index.cshtml
+++ b/Proje/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h2 class="display-4">Login to your account</h2>
+    <h2 class="display-4">And start adding shows to your list</h2>
+
 </div>
