--- a/Proje/Views/Home/Privacy.cshtml
+++ b/Proje/Views/Home/Privacy.cshtml
@@ -2,5 +2,5 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+<br />
+<h4>This website is for testing reasons.</h4>
