--- a/Proje/Views/Movies/Edit.cshtml
+++ b/Proje/Views/Movies/Edit.cshtml
@@ -43,7 +43,7 @@
                 <input asp-for="movieRunningTime" class="form-control" />
                 <span asp-validation-for="movieRunningTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <label asp-for="movieCategories" class="control-label"></label>
                 @Html.ListBoxFor(x => x.movieCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new {id= "multiSelectDropdown",multiple="multiple"})
                 <span asp-validation-for="movieCategories" class="text-danger"></span>
