--- a/Proje/Views/TvShows/Create.cshtml
+++ b/Proje/Views/TvShows/Create.cshtml
@@ -47,7 +47,7 @@
                 <input asp-for="showStory" class="form-control" />
                 <span asp-validation-for="showStory" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <label asp-for="showCategories" class="control-label"></label>
                 @Html.ListBoxFor(x => x.showCategoryArray, new MultiSelectList(Model.categoryCollection,"categoryId","categoryName"),new {id= "multiSelectDropdown",multiple="multiple"})
                 <span asp-validation-for="showCategories" class="text-danger"></span>
