--- a/Proje/Views/TvShows/Delete.cshtml
+++ b/Proje/Views/TvShows/Delete.cshtml
@@ -10,7 +10,7 @@
 <div>
     <h4>TvShow</h4>
     <hr />
-    <dl class="row">
+    <dl class="row mb-2">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.showTitle)
         </dt>
@@ -30,10 +30,17 @@
             @Html.DisplayFor(model => model.showStartYear)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.showEndYear)
+            End Year
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.showEndYear)
+            	@if (ViewData["endYear"] != null)
+			{
+				<span>@ViewData["endYear"]</span>
+			}
+			else
+			{
+				@Html.DisplayFor(model => model.showEndYear)
+			}
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.showEpisodes)
